--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 		</a>
 		<nav>
 			<a href="#" class="menu_link active"> Home </a>
-			<a href="/about" class="menu_link"> About </a>
-			<a href="/menu" class="menu_link"> Menu </a>
-			<a href="/booking" class="menu_link"> Booking </a>
+			<a href="/ms1-project/about" class="menu_link"> About </a>
+			<a href="/ms1-project/menu" class="menu_link"> Menu </a>
+			<a href="/ms1-project/booking" class="menu_link"> Booking </a>
 			<a href="#contact" class="menu_link"> Contact </a>
 		</nav>
 	</header>
