--- a/about/index.html
+++ b/about/index.html
@@ -27,10 +27,10 @@
 			<img src="../assets/img/menu.png" alt="menu">
 		</a>
 		<nav>
-			<a href="/" class="menu_link"> Home </a>
+			<a href="/MS1-Project" class="menu_link"> Home </a>
 			<a href="#" class="menu_link active"> About </a>
-			<a href="/menu" class="menu_link"> Menu </a>
-			<a href="/booking" class="menu_link"> Booking </a>
+			<a href="/MS1-Project/menu" class="menu_link"> Menu </a>
+			<a href="/MS1-Project/booking" class="menu_link"> Booking </a>
 			<a href="#contact" class="menu_link"> Contact </a>
 		</nav>
 	</header>
