--- a/navigation/index.html
+++ b/navigation/index.html
@@ -23,11 +23,11 @@
 	<header class="header_container container show_menu">
 		<a id="logo" class="symbol rotating" href="/"> &#10059;</a>
 		<nav class="show_menu ">
-			<a href="/" class="menu_link active"> Home </a>
-			<a href="/about" class="menu_link"> About </a>
-			<a href="/menu" class="menu_link"> Menu </a>
-			<a href="/booking" class="menu_link">Booking </a>
-			<a href="/#contact" class="menu_link"> Contact </a>
+			<a href="/MS1-Project" class="menu_link active"> Home </a>
+			<a href="/MS1-Project/about" class="menu_link"> About </a>
+			<a href="/MS1-Project/menu" class="menu_link"> Menu </a>
+			<a href="/MS1-Project/booking" class="menu_link">Booking </a>
+			<a href="#contact" class="menu_link"> Contact </a>
 		</nav>
 	</header>
 </body>
