--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
 	
 	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="preload stylesheet" as="style">rel="preload stylesheet" as="style">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap" rel="preload stylesheet"
-		as="style">
+	<link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="preload stylesheet" as="style">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap" rel="preload stylesheet"as="style">
 	<link rel="manifest" href="./assets/pwa/manifest.json">
 	<link rel="stylesheet" href="./assets/css/variables.css">
 	<link rel="stylesheet" href="./assets/css/styles.css">
@@ -26,15 +25,15 @@
 <body>
 	<header class="header_container container">
 		<a id="logo" class="symbol rotating" href="/"> &#10059;</a>
-		<a href="/navigation.html" class="menu_icon show">
+		<a href="/MS1-Project/navigation.html" class="menu_icon show">
 			<img src="./assets/img/menu.png" alt="menu">
 		</a>
 		<!-- Site Navigation -->
 		<nav>
 			<a href="#" class="menu_link active"> Home </a>
-			<a href="/about.html" class="menu_link"> About </a>
-			<a href="/menu.html" class="menu_link"> Menu </a>
-			<a href="/booking.html" class="menu_link"> Booking </a>
+			<a href="/MS1-Project/about.html" class="menu_link"> About </a>
+			<a href="/MS1-Project/menu.html" class="menu_link"> Menu </a>
+			<a href="/MS1-Project/booking.html" class="menu_link"> Booking </a>
 			<a href="#contact" class="menu_link"> Contact </a>
 		</nav>
 	</header>
