--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
 
 	
 	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="preload stylesheet" as="style">rel="preload stylesheet" as="style">
+	<link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="preload stylesheet" as="style">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap" rel="preload stylesheet"
 		as="style">
 	<link rel="manifest" href="./assets/pwa/manifest.json">
@@ -26,15 +26,15 @@
 <body>
 	<header class="header_container container">
 		<a id="logo" class="symbol rotating" href="/"> &#10059;</a>
-		<a href="/menu-navigation.html" class="menu_icon show">
+		<a href="/MS1-Project/menu-navigation.html" class="menu_icon show">
 			<img src="./assets/img/menu.png" alt="menu">
 		</a>
 		<!-- Site Navigation -->
 		<nav>
 			<a href="/" class="menu_link"> Home </a>
-			<a href="/about.html" class="menu_link"> About </a>
+			<a href="/MS1-Project/about.html" class="menu_link"> About </a>
 			<a href="#" class="menu_link active"> Menu </a>
-			<a href="/booking.html" class="menu_link"> Booking </a>
+			<a href="/MS1-Project/booking.html" class="menu_link"> Booking </a>
 			<a href="#contact" class="menu_link"> Contact </a>
 		</nav>
 	</header>
