--- a/navigation.html
+++ b/navigation.html
@@ -13,7 +13,7 @@
 
 	
 	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="preload stylesheet" as="style">rel="preload stylesheet" as="style">
+	<link href="https://fonts.googleapis.com/css?family=Allura&display=swap" rel="preload stylesheet" as="style">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap" rel="preload stylesheet"
 		as="style">
 	<link rel="manifest" href="./assets/pwa/manifest.json">
@@ -28,9 +28,9 @@
 		<!-- Site Navigation -->
 		<nav class="show_menu ">
 			<a href="/" class="menu_link active"> Home </a>
-			<a href="/about.html" class="menu_link"> About </a>
-			<a href="/menu.html" class="menu_link"> Menu </a>
-			<a href="/booking.html" class="menu_link">Booking </a>
+			<a href="/MS1-Project/about.html" class="menu_link"> About </a>
+			<a href="/MS1-Project/menu.html" class="menu_link"> Menu </a>
+			<a href="/MS1-Project/booking.html" class="menu_link">Booking </a>
 			<a href="/#contact" class="menu_link"> Contact </a>
 		</nav>
 	</header>
