--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 	<header class="header_container container">
-		<a id="logo" class="symbol rotating" href="/"> &#10059;</a>
+		<a id="logo" class="symbol rotating" href="/MS1-Project"> &#10059;</a>
 		<a href="/MS1-Project/navigation.html" class="menu_icon show">
 			<img src="./assets/img/menu.png" alt="menu">
 		</a>
