--- a/navigation.html
+++ b/navigation.html
@@ -24,10 +24,10 @@
 
 <body>
 	<header class="header_container container show_menu">
-		<a id="logo" class="symbol rotating" href="/"> &#10059;</a>
+		<a id="logo" class="symbol rotating" href="/MS1-Project"> &#10059;</a>
 		<!-- Site Navigation -->
 		<nav class="show_menu ">
-			<a href="/" class="menu_link active"> Home </a>
+			<a href="/MS1-Project" class="menu_link active"> Home </a>
 			<a href="/MS1-Project/about.html" class="menu_link"> About </a>
 			<a href="/MS1-Project/menu.html" class="menu_link"> Menu </a>
 			<a href="/MS1-Project/booking.html" class="menu_link">Booking </a>
