--- a/booking.html
+++ b/booking.html
@@ -25,13 +25,13 @@
 
 <body>
 	<header class="header_container container">
-		<a id="logo" class="symbol rotating" href="/"> &#10059;</a>
+		<a id="logo" class="symbol rotating" href="/MS1-Project"> &#10059;</a>
 		<a href="/MS1-Project/booking-navigation.html" class="menu_icon show">
 			<img width="40" height="28" src="./assets/img/menu.png" alt="menu">
 		</a>
 		<!-- Site Navigation -->
 		<nav>
-			<a href="/" class="menu_link"> Home </a>
+			<a href="/MS1-Project" class="menu_link"> Home </a>
 			<a href="/MS1-Project/about.html" class="menu_link"> About </a>
 			<a href="/MS1-Project/menu.html" class="menu_link"> Menu </a>
 			<a href="#" class="menu_link active"> Booking </a>
