Changed navigation urls for mobile

--- a/menu-navigation.html
+++ b/menu-navigation.html
@@ -30,7 +30,7 @@
 			<a href="/MS1-Project/about.html" class="menu_link"> About </a>
 			<a href="/MS1-Project/menu.html" class="menu_link active"> Menu </a>
 			<a href="/MS1-Project/booking.html" class="menu_link"> Booking </a>
-			<a href="/menu/#contact" class="menu_link"> Contact </a>
+			<a href="/MS1-Project/menu.html/#contact" class="menu_link"> Contact </a>
 		</nav>
 	</header>
 </body>
