--- a/navigation.html
+++ b/navigation.html
@@ -31,7 +31,7 @@
 			<a href="/MS1-Project/about.html" class="menu_link"> About </a>
 			<a href="/MS1-Project/menu.html" class="menu_link"> Menu </a>
 			<a href="/MS1-Project/booking.html" class="menu_link">Booking </a>
-			<a href="/#contact" class="menu_link"> Contact </a>
+			<a href="/MS1-Project/#contact" class="menu_link"> Contact </a>
 		</nav>
 	</header>
 </body>
