--- a/about-navigation.html
+++ b/about-navigation.html
@@ -30,7 +30,7 @@
 			<a href="/MS1-Project/about.html" class="menu_link active"> About </a>
 			<a href="/MS1-Project/menu.html" class="menu_link"> Menu </a>
 			<a href="/MS1-Project/booking.html" class="menu_link"> Booking </a>
-			<a href="/MS1-Project/about.html#contact" class="menu_link"> Contact </a>
+			<a href="/MS1-Project/about.html/#contact" class="menu_link"> Contact </a>
 		</nav>
 	</header>
 </body>
