--- a/booking-navigation.html
+++ b/booking-navigation.html
@@ -31,7 +31,7 @@
 			<a href="/MS1-Project/about.html" class="menu_link"> About </a>
 			<a href="/MS1-Project/menu.html" class="menu_link"> Menu </a>
 			<a href="/MS1-Project/booking.html" class="menu_link active"> Booking </a>
-			<a href="/booking/#contact" class="menu_link"> Contact </a>
+			<a href="/MS1-Project/booking.html/#contact" class="menu_link"> Contact </a>
 		</nav>
 	</header>
 </body>
