--- a/menu.html
+++ b/menu.html
@@ -86,6 +86,7 @@
 			<section id="main_menu" class="container">
 				<h1 class="area"> Main menu </h1>
 				<hr class="space s">
+				<img src="./assets/img/Palau.jpeg" title="palau" alt="main dish">
 				<ul class="list-items">
 					<li class="list-item">
 						<div class="item-name">
