homepage change and image

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- head of the document to load stylesheets and fonts-->
+<!-- Head of the document to load stylesheets and fonts-->
 <head>
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#0e131c">
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="./assets/css/variables.css">
 	<link rel="stylesheet" href="./assets/css/styles.css">
 	<link rel="stylesheet" href="./assets/css/home.css">
-	<title> Home | Awasana </title>
+	<title> Home | Awasana - هوسانه </title>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
 		</nav>
 	</header>
 	<div class="scroll-container">
-		<p class="covid-banner">We confirm we have complied with the government’s
+		<p class="covid-banner">We confirm we have complied with the Government’s
 			guidance on managing the risk of COVID-19</p>
 		<main class="home">
 			<section id="home" class="container">
@@ -50,13 +50,13 @@
 		</main>
 
 		<footer>
-			<!-- Contanct details -->
+			<!-- Contact details -->
 			<div id="contact" class="container">
 				<div class="contact_details">
 					<h2> Contact details </h2>
 					<address class="inner_container">
 						<div class="address">
-							<p> 123 Fancy Street </p>
+							<p> 420 Fancy Street </p>
 							<p> London, UK </p>
 						</div>
 						<div class="email-phone">
