--- a/booking.html
+++ b/booking.html
@@ -97,7 +97,7 @@
 		</main>
 
 		<footer>
-			<!-- Contanct details -->
+			<!-- Contact details -->
 			<div id="contact" class="container">
 				<div class="contact_details">
 					<h2> Contact details </h2>
