changes to about restaurant section removed the 'and'

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 					<p> A quality and relaxing restaurant located in the heart of London.  Awasana translates to cravings, bringing you your favourite Afghani cravings.
 						The building and decor will give you a relaxing vibe surrounded by charming and rustic decor with elegant modern touches.
 						Relax by the cozy log burner during the cold British winter evenings OR enjoy the occassional hot summer months outdoor (with extra heating ofcourse!)
-					    At هوسانه (Awasana) you can find a daily menu, all freshly prepared in the kitchen, the menu includes your favourite Afghani Bulani with various fillings from traditional Leek and Potato to Pumpkin and Spinach, Afghani Dumplings, known as Mantu (meat filling) or Ashak (Vegetarian option) and ofcourse the world famous Afghani Palau, with meat, carrots, raisins & almonds (You will not regret having this, I promise) and or simply just ask for the chef's daily specials with main course prices ranging from £8.99 to £24.99.
+					    At هوسانه (Awasana) you can find a daily menu, all freshly prepared in the kitchen, the menu includes your favourite Afghani Bulani with various fillings from traditional Leek and Potato to Pumpkin and Spinach, Afghani Dumplings, known as Mantu (meat filling) or Ashak (Vegetarian option) and ofcourse the world famous Afghani Palau, with meat, carrots, raisins & almonds (you will not regret having this, I promise) or simply just ask for the chef's daily specials with main course prices ranging from £8.99 to £24.99.
 					    Please note all meat at Awasana is halal verified by the Halal Verification Center. </p>
 				</div>
 				<div class="img_container">
@@ -64,7 +64,7 @@
 					<h2> Contact details </h2>
 					<address class="inner_container">
 						<div class="address">
-							<p> 123 Fancy Street </p>
+							<p> 420 Fancy Street </p>
 							<p> London, UK </p>
 						</div>
 						<div class="email-phone">
