changes to home page title

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<section id="home" class="container">
 				<div class="home_container">
 					<h1 class="area"> Awasana </h1>
-					<h2 style="color:black;"> هوسان</h2>
+					<h2 style="color:black;"> هوسانه </h2>
 					<span class="symbol"> &#10059; </span>
 				</div>
 			</section>
