--- a/menu.html
+++ b/menu.html
@@ -96,73 +96,80 @@
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Onions And Beacom</h3>
-							<p>Lorem ipsum dolor sit</p>
+							<h3>Mahicha Palau - ماهچه پلو </h3>
+							<p>Traditional Afghan rice dish with lamb, roasted carrots, almonds and raisins</p>
 						</div>
-						<div class="item-price">£4.50</div>
+						<div class="item-price">£18.99</div>
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Carbonara</h3>
-							<p>Sunt in culpa qui officia deserunt</p>
+							<h3>Qabuli Palau</h3>
+							<p>Traditional Afghan rice dish with meat, carrots and raisins</p>
+						</div>
+						<div class="item-price">£12.99.00</div>
+					</li>
+					<li class="list-item">
+						<div class="item-name">
+							<h3>Mantu - </h3>
+							<p>Dumpling with meat</p>
+						</div>
+						<div class="item-price">£10.99</div>
+					</li>
+					<li class="list-item">
+						<div class="item-name">
+							<h3>Ashak - </h3>
+							<p>Vegetarian dumpling</p>
+						</div>
+						<div class="item-price">£8.00</div>
+					</li>
+					<li class="list-item">
+						<div class="item-name">
+							<h3>Ash</h3>
+							<p>Afghan soup - options are chicken or vegetables</p>
 						</div>
 						<div class="item-price">£10.00</div>
 					</li>
+				</ul>
+			</section>
+
+					<section id="Menu" class="container">
+						<h1 class="area"> Dessert </h1>
+						<hr class="space s">
+						<ul class="list-items"></ul>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Hamburger Deluxe</h3>
-							<p>Excepteur sint occaecat cupidatat non proident</p>
+							<h3>Sheeryakh</h3>
+							<p>Traditional Afghan Icecream</p>
 						</div>
-						<div class="item-price">£15.00</div>
+						<div class="item-price">£4.50.00</div>
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Fish And Chips</h3>
-							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse</p>
+							<h3>Ferni</h3>
+							<p>Afghan pudding - options: Pistachio or Cherries</p>
 						</div>
-						<div class="item-price">£9.00</div>
+						<div class="item-price">£6.00</div>
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Toast Classic</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+							<h3>Creamrol</h3>
+							<p>Puff pastry with cream </p>
 						</div>
-						<div class="item-price">£20.00</div>
+						<div class="item-price">£4.00</div>
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Beef Steak</h3>
-							<p>Lorem ipsum dolor sit</p>
+							<h3>Doogh</h3>
+							<p>Traditional Afghan yoghurt drink</p>
 						</div>
-						<div class="item-price">£49.00</div>
-					</li>
-					<li class="list-item">
-						<div class="item-name">
-							<h3>Argentina's meals</h3>
-							<p>Sunt in culpa qui officia deserunt</p>
-						</div>
-						<div class="item-price">£10.00</div>
-					</li>
-					<li class="list-item">
-						<div class="item-name">
-							<h3>Rastbeef</h3>
-							<p>Excepteur sint occaecat cupidatat non proident</p>
-						</div>
-						<div class="item-price">£15.00</div>
-					</li>
-					<li class="list-item">
-						<div class="item-name">
-							<h3>Tomatoes And Chips</h3>
-							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse</p>
-						</div>
-						<div class="item-price">£9.00</div>
+						<div class="item-price">£2.50 or Jug: 7.50</div>
 					</li>
 				</ul>
 			</section>
 		</main>
 
 		<footer>
-			<!-- Contanct details -->
+			<!-- Contact details -->
 			<div id="contact" class="container">
 				<div class="contact_details">
 					<h2> Contact details </h2>
