changes to menu farsi lists

--- a/menu.html
+++ b/menu.html
@@ -103,63 +103,56 @@
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Qabuli Palau</h3>
+							<h3>Qabuli Palau - قابلی پلو </h3>
 							<p>Traditional Afghan rice dish with meat, carrots and raisins</p>
 						</div>
-						<div class="item-price">£12.99.00</div>
+						<div class="item-price">£12.99</div>
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Mantu - </h3>
+							<h3>Mantu - منتو</h3>
 							<p>Dumpling with meat</p>
 						</div>
 						<div class="item-price">£10.99</div>
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Ashak - </h3>
+							<h3>Ashak - اشک</h3>
 							<p>Vegetarian dumpling</p>
 						</div>
 						<div class="item-price">£8.00</div>
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Ash</h3>
+							<h3>Ash - اهس</h3>
 							<p>Afghan soup - options are chicken or vegetables</p>
 						</div>
 						<div class="item-price">£10.00</div>
 					</li>
-				</ul>
-			</section>
-
-					<section id="Menu" class="container">
-						<h1 class="area"> Dessert </h1>
-						<hr class="space s">
-						<ul class="list-items"></ul>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Sheeryakh</h3>
+							<h3>Sheeryakh - شیریخ</h3>
 							<p>Traditional Afghan Icecream</p>
 						</div>
-						<div class="item-price">£4.50.00</div>
+						<div class="item-price">£4.50</div>
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Ferni</h3>
+							<h3>Ferni - فرنی</h3>
 							<p>Afghan pudding - options: Pistachio or Cherries</p>
 						</div>
 						<div class="item-price">£6.00</div>
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Creamrol</h3>
+							<h3>Creamrol - کیریمرول</h3>
 							<p>Puff pastry with cream </p>
 						</div>
 						<div class="item-price">£4.00</div>
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Doogh</h3>
+							<h3>Doogh - دوخ</h3>
 							<p>Traditional Afghan yoghurt drink</p>
 						</div>
 						<div class="item-price">£2.50 or Jug: 7.50</div>
