updated mobile preview

--- a/menu.html
+++ b/menu.html
@@ -124,7 +124,7 @@
 					</li>
 					<li class="list-item">
 						<div class="item-name">
-							<h3>Ash - اهس</h3>
+							<h3>Ash -اهش</h3>
 							<p>Afghan soup - options are chicken or vegetables</p>
 						</div>
 						<div class="item-price">£10.00</div>
